# SmartHouseSoftware

./: README.md
raspberry-pi-apps/server/: CMakeLists.txt  inet.cpp  inet.h  main.cpp  mcp.cpp  mcp.h  utils.h
